[CI] Add unit test workflow

--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -8,3 +8,8 @@ jobs:
   soundness:
     name: Soundness
     uses: ./.github/workflows/soundness.yaml
+
+  unit_test:
+    name: Unit Test
+    uses: ./.github/workflows/unit-test.yaml
+    secrets: inherit
