--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -7,7 +7,12 @@ on:
 jobs:
   soundness:
     name: Soundness
-    uses: ./.github/workflows/soundness.yaml
+    uses: swiftlang/github-workflows/.github/workflows/soundness.yml@main
+    with:
+      api_breakage_check_enabled: false
+      python_lint_check_enabled: false
+      shell_check_enabled: false
+      yamllint_check_enabled: false
 
   unit_test:
     name: Unit Test
