Set up package benchmarks

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,6 +10,9 @@
     "--security-opt",
     "seccomp=unconfined"
   ],
+  "containerEnv": {
+    "CRANE_ENABLE_BENCHMARKS": "TRUE"
+  },
   "customizations": {
     "vscode": {
       "settings": {
